  pracma                                                                NEWS
------------------------------------------------------------------------------


PLANNED FOR NEXT VERSION

    o ode45() implementing the approach by Dormand and Prince.
      [Matlab's ode23() is based on Bogacki and Shampine.]

    o Hash functions (Python style), see "?hash".

CHANGES IN VERSION 0.7.7 (2011-10-14)

    o Another change to the NEWS.Rd file.

CHANGES IN VERSION 0.7.6 (2011-08-05)

    o gaussNewton() for function minimization and solving systems of
      nonlinear equations. fsolve() as a wrapper for it.

    o fzsolve() for root finding of complex functions.

    o softline() Fletcher's inexact linesearch algorithm.

CHANGES IN VERSION 0.7.5 (2011-07-26)

    o Put NEWS.Rd in the /inst subdirectory (and NEWS.pdf in /doc),
      thanks to Kurt Hornik; slightly changed the version numbering.

CHANGES IN VERSION 0.7-4 (2011-07-22)

    o rortho() generate random orthogonal matrix of size n.

    o Titanium data set for testing fitting procedures.

CHANGES IN VERSION 0.7-3 (2011-07-15)

    o erf() and erfc() error and complementary error functions
      (Matlab style) as (almost) aliases for pnorm().

    o erfz() complex error function.

CHANGES IN VERSION 0.7-2 (2011-07-11)

    o broyden() quasi-Newton root finding method for systems of nonlinear
      equations.

CHANGES IN VERSION 0.7-1 (2011-07-09)

    o cross() has been vectorized (remark on R-help).

CHANGES IN VERSION 0.7-0 (2011-07-07)

    o Sigmoid and Einstein functions.

    o Updated NEWS.Rd, NEWS.pdf

CHANGES IN VERSION 0.6-9 (2011-07-06)

    o Runge-Kutta-Fehlberg method of order (5,4).

CHANGES IN VERSION 0.6-8 (2011-07-05)

    o triquad() Gaussian quadrature over triangles.

    o cotes() Newton-Cotes integration formulae for 2 to 8 nodes.

CHANGES IN VERSION 0.6-7 (2011-07-04)

    o lagrangeInterp(), newtonInterp() Lagrange and Newton polynomial
      interpolation, neville() Neville's methods.
