@@ -3,7 +3,7 @@ Type: Package
 Title: Practical Numerical Math Functions
 Version: 0.7.7
 Depends: R (>= 2.10.2)
-Date: 2011-10-14
+Date: 2011-10-16
 Author: Hans W Borchers
 Maintainer: HwB <hwborchers@googlemail.com>
 Description: This package provides R implementations of functions in
